# bits-n-bytes-embedded

./: .gitignore  .gitmodules  README.md
arduino/: led.cpp
atlas/: CMakeLists.txt  README.md
atlas/components/fans/: CMakeLists.txt  fans.c
atlas/components/fans/include/: fans.h
atlas/components/shelf_manager/: CMakeLists.txt  shelf_manager.c
atlas/components/shelf_manager/include/: shelf_manager.h
atlas/main/: CMakeLists.txt  atlas.c  idf_component.yml
doors/: CMakeLists.txt
doors/main/: CMakeLists.txt  doors.c  led.c
hecate/: .gitignore  CMakeLists.txt  README.md
hecate/main/: CMakeLists.txt  hecate.c  idf_component.yml
shared/bnb_ack/: CMakeLists.txt  bnb_ack.c
shared/bnb_ack/include/: bnb_ack.h
shared/bnb_protocol/: CMakeLists.txt  bnb_protocol.c
shared/bnb_protocol/include/: bnb_protocol.h
shelf/: CMakeLists.txt
shelf/main/: CMakeLists.txt  shelf.c
ui/untitled/: main.ui  ui_form.py
